// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home View renders correctly with facets 1`] = `
<StaticRouter
  basename=""
  location="/"
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <ThemeProvider
      theme={Object {}}
    >
      <Home
        facets={null}
        loadFacets={[Function]}
      >
        <Theme
          className="r4r-home"
          element="div"
        >
          <div
            className="r4r-home  "
          >
            <HelmetWrapper
              defer={true}
              encodeSpecialCharacters={true}
            >
              <SideEffect(NullComponent)
                defer={true}
                encodeSpecialCharacters={true}
                meta={
                  Array [
                    Object {
                      "content": "Resources for Researchers is a tool to give researchers a better understanding of the various tools available to them.",
                      "property": "og:description",
                    },
                    Object {
                      "content": undefined,
                      "property": "og:url",
                    },
                  ]
                }
              >
                <NullComponent
                  defer={true}
                  encodeSpecialCharacters={true}
                  meta={
                    Array [
                      Object {
                        "content": "Resources for Researchers is a tool to give researchers a better understanding of the various tools available to them.",
                        "property": "og:description",
                      },
                      Object {
                        "content": undefined,
                        "property": "og:url",
                      },
                    ]
                  }
                />
              </SideEffect(NullComponent)>
            </HelmetWrapper>
            <h1>
              Resources for Researchers
            </h1>
            <Theme
              className="home__main"
              element="main"
            >
              <main
                className="home__main  "
              >
                <Theme
                  className="home__desc"
                  element="article"
                >
                  <article
                    className="home__desc  "
                  >
                    <p>
                      Resources for Researchers is a directory of NCI-supported tools and services for cancer researchers. Most resources are free of cost and available to anyone. 
                      <Theme
                        className="r4r__link--about"
                        element="a"
                        href="https://www.cancer.gov/research/about-r4r"
                      >
                        <a
                          className="r4r__link--about  "
                          href="https://www.cancer.gov/research/about-r4r"
                        >
                          Learn more about Resources for Researchers.
                        </a>
                      </Theme>
                    </p>
                  </article>
                </Theme>
              </main>
            </Theme>
            <Theme
              className="home-nav"
              element="nav"
            >
              <nav
                className="home-nav  "
              >
                <Theme
                  className="home-nav__tiles"
                  element="div"
                >
                  <div
                    className="home-nav__tiles  "
                  >
                    <Theme
                      className="home-nav__tile"
                      element="div"
                    >
                      <div
                        className="home-nav__tile  "
                      >
                        <SVG
                          className="home-tile__icon"
                          iconType="searchIcon"
                        >
                          <Theme
                            className="home-tile__icon"
                            element="div"
                          >
                            <div
                              className="home-tile__icon  "
                            >
                              <svg
                                id="Layer_1"
                                style={
                                  Object {
                                    "enableBackground": "new 0 0 100 100.6",
                                  }
                                }
                                version="1.1"
                                viewBox="0 0 100 100.6"
                                x="0px"
                                xmlSpace="preserve"
                                xmlns="http://www.w3.org/2000/svg"
                                xmlnsXlink="http://www.w3.org/1999/xlink"
                                y="0px"
                              >
                                <g>
                                  <path
                                    d="M95,3.8H5v92.5h90V3.8z M89,9.8v16H11v-16H89z M11,90.3V31.8h78v58.5H11z"
                                  />
                                  <circle
                                    cx="30"
                                    cy="17.7"
                                    r="4.1"
                                  />
                                  <circle
                                    cx="40.6"
                                    cy="17.7"
                                    r="4.1"
                                  />
                                  <circle
                                    cx="19.4"
                                    cy="17.7"
                                    r="4.1"
                                  />
                                </g>
                                <path
                                  d="M69.3,81.3c-1.6,1.6-4.3,1.6-5.9,0l-7.7-7.7c-2.7,1.7-5.9,2.6-9.3,2.6c-9.8,0-17.8-8-17.8-17.9s8-17.8,17.8-17.8 s17.9,8,17.9,17.8c0,3.4-1,6.6-2.6,9.3l7.7,7.7C70.9,77,70.9,79.6,69.3,81.3z M46.3,46.8c-6.3,0-11.5,5.2-11.5,11.5 S40,69.9,46.4,69.9s11.6-5.2,11.6-11.6S52.7,46.8,46.3,46.8z"
                                />
                              </svg>
                            </div>
                          </Theme>
                        </SVG>
                        <div
                          className="home-tile__text"
                        >
                          <h2>
                            Search For Resources
                          </h2>
                          <p>
                            Search for resources by keyword or phrase.
                          </p>
                        </div>
                      </div>
                    </Theme>
                    <Theme
                      className="home-nav__tile"
                      element="div"
                    >
                      <div
                        className="home-nav__tile  "
                      >
                        <SearchBar
                          onChange={[Function]}
                          onSubmit={[Function]}
                          page="home"
                          placeholder="Search Resources for Researchers"
                        >
                          <Theme
                            className="searchbar__container"
                            element="form"
                            onSubmit={[Function]}
                          >
                            <form
                              className="searchbar__container  "
                              onSubmit={[Function]}
                            >
                              <input
                                aria-label="Input search text here to search for a resource"
                                onChange={[Function]}
                                placeholder="Search Resources for Researchers"
                                type="text"
                              />
                              <Theme
                                aria-label="submit search"
                                className="searchbar__button--submit"
                                element="button"
                                type="submit"
                              >
                                <button
                                  aria-label="submit search"
                                  className="searchbar__button--submit  "
                                  type="submit"
                                >
                                  <SVG
                                    className="r4r-svg-container"
                                    iconType="magnify"
                                  >
                                    <Theme
                                      className="r4r-svg-container"
                                      element="div"
                                    >
                                      <div
                                        className="r4r-svg-container  "
                                      >
                                        <svg
                                          height="16px"
                                          version="1.1"
                                          viewBox="0 0 16 16"
                                          width="16px"
                                          xmlns="http://www.w3.org/2000/svg"
                                          xmlnsXlink="http://www.w3.org/1999/xlink"
                                        >
                                          <title>
                                            Magnifying Glass Icon
                                          </title>
                                          <defs />
                                          <g
                                            fill="none"
                                            fillRule="evenodd"
                                            id="r4r-magnify-icon"
                                            stroke="none"
                                            strokeWidth="1"
                                          >
                                            <path
                                              d="M12.370756,11.6338533 L11.497863,11.1003191 L12.0511346,10.2398009 C12.6676075,9.28098399 13,8.16636264 13,7 C13,3.6862915 10.3137085,1 7,1 C3.6862915,1 1,3.6862915 1,7 C1,10.3137085 3.6862915,13 7,13 C8.18648905,13 9.31933446,12.6559913 10.2886875,12.0193666 L11.1435654,11.4579236 L11.685632,12.3252172 C11.7040473,12.3546813 11.7258067,12.3825474 11.7510134,12.4086496 L14.5296468,15.2860088 C14.7214715,15.484649 15.0380057,15.4901741 15.2366459,15.2983495 C15.4352861,15.1065249 15.4408113,14.7899906 15.2489866,14.5913504 L12.4703532,11.7139912 C12.4398346,11.6823883 12.4065292,11.6557187 12.370756,11.6338533 Z"
                                              id="Combined-Shape"
                                              stroke="#FFFFFF"
                                              strokeWidth="2"
                                            />
                                          </g>
                                        </svg>
                                      </div>
                                    </Theme>
                                  </SVG>
                                </button>
                              </Theme>
                            </form>
                          </Theme>
                        </SearchBar>
                      </div>
                    </Theme>
                    <Theme
                      className="home-nav__tile"
                      element="div"
                    >
                      <div
                        className="home-nav__tile  "
                      >
                        <SVG
                          className="home-tile__icon"
                          iconType="browseIcon"
                        >
                          <Theme
                            className="home-tile__icon"
                            element="div"
                          >
                            <div
                              className="home-tile__icon  "
                            >
                              <svg
                                id="Layer_1"
                                style={
                                  Object {
                                    "enableBackground": "new 0 0 100 100.6",
                                  }
                                }
                                version="1.1"
                                viewBox="0 0 100 100.6"
                                x="0px"
                                xmlSpace="preserve"
                                xmlns="http://www.w3.org/2000/svg"
                                xmlnsXlink="http://www.w3.org/1999/xlink"
                                y="0px"
                              >
                                <g>
                                  <path
                                    d="M95,3.8H5v92.5h90V3.8z M89,9.8v16H11v-16H89z M11,90.3V31.8h78v58.5H11z"
                                  />
                                  <circle
                                    cx="30"
                                    cy="17.7"
                                    r="4.1"
                                  />
                                  <circle
                                    cx="40.6"
                                    cy="17.7"
                                    r="4.1"
                                  />
                                  <circle
                                    cx="19.4"
                                    cy="17.7"
                                    r="4.1"
                                  />
                                  <path
                                    d="M63.1,84.4h19.8v-21H63.1V84.4z M69.1,69.4h7.8v9h-7.8V69.4z"
                                  />
                                  <path
                                    d="M17.1,84.4h19.8v-21H17.1V84.4z M23.1,69.4h7.8v9h-7.8V69.4z"
                                  />
                                  <path
                                    d="M40.1,84.4h19.8v-21H40.1V84.4z M46.1,69.4h7.8v9h-7.8V69.4z"
                                  />
                                  <path
                                    d="M63.1,58.4h19.8v-21H63.1V58.4z M69.1,43.4h7.8v9h-7.8V43.4z"
                                  />
                                  <path
                                    d="M17.1,58.4h19.8v-21H17.1V58.4z M23.1,43.4h7.8v9h-7.8V43.4z"
                                  />
                                  <path
                                    d="M40.1,58.4h19.8v-21H40.1V58.4z M46.1,43.4h7.8v9h-7.8V43.4z"
                                  />
                                </g>
                              </svg>
                            </div>
                          </Theme>
                        </SVG>
                        <div
                          className="home-tile__text"
                        >
                          <h2>
                            Browse Resources
                          </h2>
                          <p>
                            Browse resources by tool type or research area or view all resources.
                          </p>
                        </div>
                      </div>
                    </Theme>
                    <Theme
                      className="home-nav__tile"
                      element="div"
                    >
                      <div
                        className="home-nav__tile  "
                      >
                        <Theme
                          className="view-all__link"
                          element="a"
                          onClick={[Function]}
                          onKeyPress={[Function]}
                          tabIndex="0"
                        >
                          <a
                            className="view-all__link  "
                            onClick={[Function]}
                            onKeyPress={[Function]}
                            tabIndex="0"
                          >
                            View All Resources
                          </a>
                        </Theme>
                      </div>
                    </Theme>
                  </div>
                </Theme>
                <Theme
                  className="home-nav__main"
                  element="div"
                >
                  <div
                    className="home-nav__main  "
                  >
                    <Theme
                      aria-label="Browse by Tool Type"
                      className="home-nav__section"
                      element="div"
                    >
                      <div
                        aria-label="Browse by Tool Type"
                        className="home-nav__section  "
                      >
                        <Theme
                          className="home-nav__title"
                          element="h4"
                        >
                          <h4
                            className="home-nav__title  "
                          >
                            Tool Type
                          </h4>
                        </Theme>
                        <BrowseBox
                          displayCount={true}
                          facets={Object {}}
                          filterType="toolTypes"
                          searchFunction={[Function]}
                        >
                          <Theme
                            className="browse-tiles__container"
                            element="div"
                          >
                            <div
                              className="browse-tiles__container  "
                            />
                          </Theme>
                        </BrowseBox>
                      </div>
                    </Theme>
                    <Theme
                      aria-label="Browse by Research Area"
                      className="home-nav__section"
                      element="div"
                    >
                      <div
                        aria-label="Browse by Research Area"
                        className="home-nav__section  "
                      >
                        <Theme
                          className="home-nav__title"
                          element="h4"
                        >
                          <h4
                            className="home-nav__title  "
                          >
                            Research Area
                          </h4>
                        </Theme>
                        <BrowseBox
                          displayCount={true}
                          facets={Object {}}
                          filterType="researchAreas"
                          searchFunction={[Function]}
                        >
                          <Theme
                            className="browse-tiles__container"
                            element="div"
                          >
                            <div
                              className="browse-tiles__container  "
                            />
                          </Theme>
                        </BrowseBox>
                      </div>
                    </Theme>
                  </div>
                </Theme>
              </nav>
            </Theme>
          </div>
        </Theme>
      </Home>
    </ThemeProvider>
  </Router>
</StaticRouter>
`;

exports[`Home View renders correctly without facets 1`] = `
<Theme
  className="r4r-home"
  element="div"
>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <meta
      content="Resources for Researchers is a tool to give researchers a better understanding of the various tools available to them."
      property="og:description"
    />
    <meta
      property="og:url"
    />
  </HelmetWrapper>
  <h1>
    Resources for Researchers
  </h1>
  <Theme
    className="home__main"
    element="main"
  >
    <Theme
      className="home__desc"
      element="article"
    >
      <p>
        Resources for Researchers is a directory of NCI-supported tools and services for cancer researchers. Most resources are free of cost and available to anyone. 
        <Theme
          className="r4r__link--about"
          element="a"
          href="https://www.cancer.gov/research/about-r4r"
        >
          Learn more about Resources for Researchers.
        </Theme>
      </p>
    </Theme>
  </Theme>
  <Theme
    className="home-nav"
    element="nav"
  >
    <Theme
      className="home-nav__tiles"
      element="div"
    >
      <Theme
        className="home-nav__tile"
        element="div"
      >
        <SVG
          className="home-tile__icon"
          iconType="searchIcon"
        />
        <div
          className="home-tile__text"
        >
          <h2>
            Search For Resources
          </h2>
          <p>
            Search for resources by keyword or phrase.
          </p>
        </div>
      </Theme>
      <Theme
        className="home-nav__tile"
        element="div"
      >
        <SearchBar
          onChange={[Function]}
          onSubmit={[Function]}
          page="home"
          placeholder="Search Resources for Researchers"
        />
      </Theme>
      <Theme
        className="home-nav__tile"
        element="div"
      >
        <SVG
          className="home-tile__icon"
          iconType="browseIcon"
        />
        <div
          className="home-tile__text"
        >
          <h2>
            Browse Resources
          </h2>
          <p>
            Browse resources by tool type or research area or view all resources.
          </p>
        </div>
      </Theme>
      <Theme
        className="home-nav__tile"
        element="div"
      >
        <Theme
          className="view-all__link"
          element="a"
          onClick={[Function]}
          onKeyPress={[Function]}
          tabIndex="0"
        >
          View All Resources
        </Theme>
      </Theme>
    </Theme>
    <Theme
      className="home-nav__main"
      element="div"
    >
      <Theme
        aria-label="Browse by Tool Type"
        className="home-nav__section"
        element="div"
      >
        <Theme
          className="home-nav__title"
          element="h4"
        >
          Tool Type
        </Theme>
        <BrowseBox
          displayCount={true}
          facets={Object {}}
          filterType="toolTypes"
          searchFunction={[Function]}
        />
      </Theme>
      <Theme
        aria-label="Browse by Research Area"
        className="home-nav__section"
        element="div"
      >
        <Theme
          className="home-nav__title"
          element="h4"
        >
          Research Area
        </Theme>
        <BrowseBox
          displayCount={true}
          facets={Object {}}
          filterType="researchAreas"
          searchFunction={[Function]}
        />
      </Theme>
    </Theme>
  </Theme>
</Theme>
`;
